--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
 </head>
 
 <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde nam voluptatibus, laudantium temporibus expedita
-        quae facere nesciunt, vero molestias iure natus consequatur cumque. Iste impedit quod pariatur odit assumenda
-        dolores.</p>
+    <a href="" class="arrow-link">Learn More</a>
 </body>
 
 </html>
