--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    <a href="" class="arrow-link">Learn More</a>
+    <ul class="list list--inline">
+        <li class="list__item">Item 1</li>
+        <li class="list__item">Item 2</li>
+        <li class="list__item">Item 3</li>
+    </ul>
 </body>
 
 </html>
