--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    <span class="badge badge--primary badge--small">.com ₹1049</span>
+    <span class="icon-container">
+        <svg class="icon icon-primary">
+            <use xlink:href="images/sprite.svg#wordpress"></use>
+        </svg>
+    </span>
 </body>
 
 </html>
