--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 </head>
 
 <body>
-    <span class="icon-container">
-        <svg class="icon icon-primary">
-            <use xlink:href="images/sprite.svg#wordpress"></use>
-        </svg>
-    </span>
+    <button class="btn btn--primary btn--block">Get Started</button>
+    <a href="#" class="btn btn--accent btn--block">Get Started</a>
+    <button class="btn btn--outline btn--block">Buy now</button>
 </body>
 
 </html>
