--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
 </head>
 
 <body>
-    <button class="btn btn--primary btn--block">Get Started</button>
-    <a href="#" class="btn btn--accent btn--block">Get Started</a>
-    <button class="btn btn--outline btn--block">Buy now</button>
+    <div class="input-group">
+        <input type="text" class="input" placeholder="Enter domain name here...">
+        <button class="btn btn--accent">
+            <svg class="icon icon-primary" style="
+            width: 2rem;
+            height: 2rem;
+            margin-right: 1rem;
+            vertical-align: middle;
+            fill: #fff;">
+                <use xlink:href="/images/sprite.svg#search"></use>
+            </svg>
+            Search
+        </button>
+    </div>
 </body>
 
 </html>
