--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
 </head>
 
 <body>
-    <div class="input-group">
-        <input type="text" class="input" placeholder="Enter domain name here...">
-        <button class="btn btn--accent">
-            <svg class="icon icon-primary" style="
-            width: 2rem;
-            height: 2rem;
-            margin-right: 1rem;
-            vertical-align: middle;
-            fill: #fff;">
-                <use xlink:href="/images/sprite.svg#search"></use>
-            </svg>
-            Search
-        </button>
+    <div style="width: 30%; padding: 5rem; display: inline-block;">
+        <div class="card card--primary">
+            <header class="card__header">Card Header</header>
+            <div class="card__body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, unde modi suscipit
+                tempora recusandae cupiditate exercitationem illo aliquam molestiae aperiam a accusantium pariatur fuga
+                sunt
+                excepturi enim distinctio totam inventore?</div>
+        </div>
+    </div>
+    <div style="width: 30%; padding: 5rem; display: inline-block;">
+        <div class="card card--secondary">
+            <header class="card__header">Card Header</header>
+            <div class="card__body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, unde modi suscipit
+                tempora recusandae cupiditate exercitationem illo aliquam molestiae aperiam a accusantium pariatur fuga
+                sunt
+                excepturi enim distinctio totam inventore?</div>
+        </div>
     </div>
 </body>
 
