--- a/index.html
+++ b/index.html
@@ -14,21 +14,66 @@
 
 <body>
     <div style="width: 30%; padding: 5rem; display: inline-block;">
-        <div class="card card--primary">
-            <header class="card__header">Card Header</header>
-            <div class="card__body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, unde modi suscipit
-                tempora recusandae cupiditate exercitationem illo aliquam molestiae aperiam a accusantium pariatur fuga
-                sunt
-                excepturi enim distinctio totam inventore?</div>
+        <div class="plan">
+            <div class="card card--primary">
+                <header class="card__header">
+                    <h3 class="plan__name">Entry</h3>
+                    <span class="plan__price">₹1050</span>
+                    <span class="plan__duration">/month</span>
+                    <span class="badge badge--primary badge--small">10% off</span>
+                    <span class="plan__description">Easy start on Cloud J</span>
+                </header>
+                <div class="card__body">
+                    <ul class="list list--tickmark">
+                        <li class="list__item">Item 1</li>
+                        <li class="list__item">Item 2</li>
+                        <li class="list__item">Item 3</li>
+                    </ul>
+                    <button class="btn btn--outline btn--block">Buy now</button>
+                </div>
+            </div>
         </div>
     </div>
     <div style="width: 30%; padding: 5rem; display: inline-block;">
-        <div class="card card--secondary">
-            <header class="card__header">Card Header</header>
-            <div class="card__body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, unde modi suscipit
-                tempora recusandae cupiditate exercitationem illo aliquam molestiae aperiam a accusantium pariatur fuga
-                sunt
-                excepturi enim distinctio totam inventore?</div>
+        <div class="plan plan--popular">
+            <div class="card card--primary">
+                <header class="card__header">
+                    <h3 class="plan__name">Entry</h3>
+                    <span class="plan__price">₹1050</span>
+                    <span class="plan__duration">/month</span>
+                    <span class="badge badge--primary badge--small">10% off</span>
+                    <span class="plan__description">Easy start on Cloud J</span>
+                </header>
+                <div class="card__body">
+                    <ul class="list list--tickmark">
+                        <li class="list__item">Item 1</li>
+                        <li class="list__item">Item 2</li>
+                        <li class="list__item">Item 3</li>
+                    </ul>
+                    <button class="btn btn--outline btn--block">Buy now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="width: 30%; padding: 5rem; display: inline-block;">
+        <div class="plan">
+            <div class="card card--secondary">
+                <header class="card__header">
+                    <h3 class="plan__name">Entry</h3>
+                    <span class="plan__price">₹1050</span>
+                    <span class="plan__duration">/month</span>
+                    <span class="badge badge--secondary badge--small">10% off</span>
+                    <span class="plan__description">Easy start on Cloud J</span>
+                </header>
+                <div class="card__body">
+                    <ul class="list list--tickmark">
+                        <li class="list__item">Item 1</li>
+                        <li class="list__item">Item 2</li>
+                        <li class="list__item">Item 3</li>
+                    </ul>
+                    <button class="btn btn--outline btn--block">Buy now</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
