--- a/index.html
+++ b/index.html
@@ -13,67 +13,16 @@
 </head>
 
 <body>
-    <div style="width: 30%; padding: 5rem; display: inline-block;">
-        <div class="plan">
-            <div class="card card--primary">
-                <header class="card__header">
-                    <h3 class="plan__name">Entry</h3>
-                    <span class="plan__price">₹1050</span>
-                    <span class="plan__duration">/month</span>
-                    <span class="badge badge--primary badge--small">10% off</span>
-                    <span class="plan__description">Easy start on Cloud J</span>
-                </header>
-                <div class="card__body">
-                    <ul class="list list--tickmark">
-                        <li class="list__item">Item 1</li>
-                        <li class="list__item">Item 2</li>
-                        <li class="list__item">Item 3</li>
-                    </ul>
-                    <button class="btn btn--outline btn--block">Buy now</button>
-                </div>
-            </div>
+    <div class="media">
+        <div class="media__image">
+            <svg class="icon icon-primary">
+                <use xlink:href="images/sprite.svg#snap"></use>
+            </svg>
         </div>
-    </div>
-    <div style="width: 30%; padding: 5rem; display: inline-block;">
-        <div class="plan plan--popular">
-            <div class="card card--primary">
-                <header class="card__header">
-                    <h3 class="plan__name">Entry</h3>
-                    <span class="plan__price">₹1050</span>
-                    <span class="plan__duration">/month</span>
-                    <span class="badge badge--primary badge--small">10% off</span>
-                    <span class="plan__description">Easy start on Cloud J</span>
-                </header>
-                <div class="card__body">
-                    <ul class="list list--tickmark">
-                        <li class="list__item">Item 1</li>
-                        <li class="list__item">Item 2</li>
-                        <li class="list__item">Item 3</li>
-                    </ul>
-                    <button class="btn btn--outline btn--block">Buy now</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div style="width: 30%; padding: 5rem; display: inline-block;">
-        <div class="plan">
-            <div class="card card--secondary">
-                <header class="card__header">
-                    <h3 class="plan__name">Entry</h3>
-                    <span class="plan__price">₹1050</span>
-                    <span class="plan__duration">/month</span>
-                    <span class="badge badge--secondary badge--small">10% off</span>
-                    <span class="plan__description">Easy start on Cloud J</span>
-                </header>
-                <div class="card__body">
-                    <ul class="list list--tickmark">
-                        <li class="list__item">Item 1</li>
-                        <li class="list__item">Item 2</li>
-                        <li class="list__item">Item 3</li>
-                    </ul>
-                    <button class="btn btn--outline btn--block">Buy now</button>
-                </div>
-            </div>
+        <div class="media__body">
+            <h3 class="media__title">Easy Start & Managed Updates</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nesciunt commodi ut officiis asperiores
+                similique consequuntur quod laboriosam explicabo ullam?</p>
         </div>
     </div>
 </body>
