--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
 </head>
 
 <body>
-    <div class="media">
-        <div class="media__image">
-            <svg class="icon icon-primary">
-                <use xlink:href="images/sprite.svg#snap"></use>
-            </svg>
-        </div>
-        <div class="media__body">
-            <h3 class="media__title">Easy Start & Managed Updates</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nesciunt commodi ut officiis asperiores
-                similique consequuntur quod laboriosam explicabo ullam?</p>
-        </div>
-    </div>
+    <blockquote class="quote">
+        <p class="quote__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque officia commodi quam,
+            voluptatibus deserunt
+            excepturi numquam asperiores modi. Aliquid, quaerat?</p>
+        <footer>
+            <div class="media">
+                <div class="media__image">
+                    <svg class="icon icon-primary">
+                        <use xlink:href="images/sprite.svg#line"></use>
+                    </svg>
+                </div>
+                <div class="media__body">
+                    <h3 class="quote__author">Sonu Shah</h3>
+                    <p class="quote__oraganization">Code Company</p>
+                </div>
+            </div>
+        </footer>
+    </blockquote>
 </body>
 
-</html>
+</html>s
