--- a/index.html
+++ b/index.html
@@ -13,35 +13,14 @@
 </head>
 
 <body>
-    <div class="card review_card">
+    <div class="callout callout--primary">
         <div class="grid grid--1x2">
-            <div class="rc__image">
-                <img src="images/testimonial.jpg" alt="Happy Customer">
-                <span class="icon-container icon-container--accent">
-                    <svg class="icon icon--white">
-                        <use xlink:href="images/sprite.svg#quotes"></use>
-                    </svg>
-                </span>
+            <div class="callout__content">
+                <h2 class="callout__heading">Ready to Get Started ?</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur ex laudantium quo facere
+                    provident blanditiis tenetur at veniam ducimus nostrum!</p>
             </div>
-            <blockquote class="quote">
-                <p class="quote__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque officia
-                    commodi quam,
-                    voluptatibus deserunt
-                    excepturi numquam asperiores modi. Aliquid, quaerat?</p>
-                <footer>
-                    <div class="media">
-                        <div class="media__image">
-                            <svg class="icon icon-primary">
-                                <use xlink:href="images/sprite.svg#line"></use>
-                            </svg>
-                        </div>
-                        <div class="media__body">
-                            <h3 class="quote__author">Sonu Shah</h3>
-                            <p class="quote__oraganization">Code Company</p>
-                        </div>
-                    </div>
-                </footer>
-            </blockquote>
+            <a href="#" class="btn btn--secondary btn--long">Get Started</a>
         </div>
     </div>
 </body>
