--- a/index.html
+++ b/index.html
@@ -13,16 +13,29 @@
 </head>
 
 <body>
-    <div class="callout callout--primary">
-        <div class="grid grid--1x2">
-            <div class="callout__content">
-                <h2 class="callout__heading">Ready to Get Started ?</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur ex laudantium quo facere
-                    provident blanditiis tenetur at veniam ducimus nostrum!</p>
-            </div>
-            <a href="#" class="btn btn--secondary btn--long">Get Started</a>
+    <div class="collapsible collapsible--expanded">
+        <header class="collapsible__header">
+            <h2 class="collapsible__heading">Products</h2>
+            <svg class="icon icon--white collapsible__icon">
+                <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+        </header>
+        <div class="collapsible__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, nobis.
         </div>
     </div>
+    <div class="collapsible collapsible--expanded">
+        <header class="collapsible__header">
+            <h2 class="collapsible__heading">Products</h2>
+            <svg class="icon icon--white collapsible__icon">
+                <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+        </header>
+        <div class="collapsible__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, nobis.
+        </div>
+    </div>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
