--- a/index.html
+++ b/index.html
@@ -13,18 +13,29 @@
 </head>
 
 <body>
-    <nav class="nav collapsible">
-        <a href="/"><img class="logo" src="images/logo.png" alt=""></a>
-        <svg class="icon icon--white menu-icon">
-            <use xlink:href="images/sprite.svg#menu"></use>
-        </svg>
-        <ul class="list nav__list collapsible__content">
-            <li class='nav__item'><a href="#">Hosting</a></li>
-            <li class='nav__item'><a href="#">VPS</a></li>
-            <li class='nav__item'><a href="#">Domain</a></li>
-            <li class='nav__item'><a href="#">Pricing</a></li>
+    <div class="block container block-domain">
+        <header class="block__header">
+            <h2>Starting at ₹749 per month</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores.</p>
+        </header>
+        <div class="input-group">
+            <input type="text" class="input" placeholder="Enter domain name here...">
+            <button class="btn btn--accent">
+                <svg class="icon icon--white">
+                    <use xlink:href="/images/sprite.svg#search"></use>
+                </svg>
+                Search
+            </button>
+        </div>
+        <ul class="list block-domain__price">
+            <li><span class="badge badge--secondary badge--small">.com ₹749</span></li>
+            <li>.org ₹825</li>
+            <li>.info ₹1050</li>
+            <li>.net ₹749</li>
+            <li>.co ₹850</li>
+            <li>.xyz ₹749</li>
         </ul>
-    </nav>
+    </div>
     <script src="js/main.js"></script>
 </body>
 
